<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">
    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint = "@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spiPrimaryBusiness"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="@string/primaryBusiness"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spiPrimaryBusiness"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/etProvince"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="@string/province"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/btUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btUpdate"
        app:layout_constraintTop_toBottomOf="@+id/etProvince"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:onClick="updateContact"/>

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btDelete"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etProvince"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:onClick="eraseContact"/>



</android.support.constraint.ConstraintLayout>
